oke 85% register.jsx

--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -8,6 +8,7 @@ $bg-c0-white:#F5F5F5;
 
 $bg-c0-dark:#000;
 $bg-c1-dark:rgba(222, 221, 220, 1);
+$bg-c2-dark:#d9d9d9;
 
 $bg-c0-yellow:#F8B653;
 $bg-c1-yellow:rgba(225, 176, 103);
