--- a/src/assets/scss/layouts/_login.scss
+++ b/src/assets/scss/layouts/_login.scss
@@ -1,4 +1,5 @@
-.form-login {
+.content-login {
+  
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +13,11 @@
             margin-left: 6.67px;
             margin-bottom: 10px;
         }
-
+        .p-err {
+            margin-left: 0px;
+            width: 443px;
+            height: 54px;
+        }
         &:nth-child(2) {
             margin-bottom: 33px;
         }
