--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -25,6 +25,8 @@ $text-c2-dark:rgba(203, 201, 201, 1);
 $text-c3-dark:#00000099;
 
 $text-c0-primary:#152AEBCC;
+
+$text-pink:#DD2AED;
 // font-Weight
 $fw-lighter :200;
 $fw-light: 300;
@@ -34,11 +36,12 @@ $fw-bolder:600;
 
 //fontSize
 $fs-base: 16px;
-$fs-18:18px;
 $fs-2xl: 20px;
-$fs-24:24px;
 $fs-3xl: 30px;
 $fs-4xl: 40px;
+$fs-18:18px;
+$fs-24:24px;
+$fs-32:32px;
 //light-height khi xuất hiện giá trị mới ở các trang khác thì có thể thêm vào thay đổi (c)
 $lh-c1:19.36px;
 $lh-c2:24.2px;
@@ -46,6 +49,7 @@ $lh-c3:2px;
 $lh-c4:48.41px;
 $lh-c5:29.05px;
 $lh-c6:36.31px;
+$lh-c7:38.73px;
 //whwidth
 
 
