--- a/src/assets/scss/layouts/_profile.scss
+++ b/src/assets/scss/layouts/_profile.scss
@@ -136,7 +136,7 @@
         }
 
         table {
-            margin-left: 102px;
+            // margin-left: 102px;
             margin-bottom: 76px;
             text-align: center;
 
