xong chu nang Search

--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -13,6 +13,7 @@ $bg-c2-dark:#d9d9d9;
 $bg-c0-yellow:#F8B653;
 $bg-c1-yellow:rgba(225, 176, 103);
 
+$bg-c0-green:#9DE167;
 /*----- boder  ----*/
 $bd-c0:1px solid #F8B653;
 
@@ -50,6 +51,4 @@ $lh-c4:48.41px;
 $lh-c5:29.05px;
 $lh-c6:36.31px;
 $lh-c7:38.73px;
-//whwidth
-
-
+//width s
