anh them index scss va Home jsx mai anh tiep tuc nhe, co gi anh noi thay cho. Truoc cung tre nhieu lam

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -17,6 +17,16 @@ h2 {
     line-height: $lh-c4;
 }
 
+.custom_feature h3{
+
+    background: linear-gradient(180deg, #F21299 0%, #1B02B5 100%);
+    padding: 10px 0px;
+}
+
+.custom_shoes {
+    border: 1px solid gray;
+}
+
 .btn-main {
     width: 121px;
     height: 48px;
