--- a/src/assets/scss/layouts/_search.scss
+++ b/src/assets/scss/layouts/_search.scss
@@ -116,6 +116,7 @@
                         height: 64px;
                         background: $bg-c0-green;
                         padding: 22px 27px 18px 39px;
+                        cursor: pointer;
 
                         @media screen and (max-width:991.98px) {
                             width: 230px;
