--- a/src/detail_folder/scss/base/_base_detail.scss
+++ b/src/detail_folder/scss/base/_base_detail.scss
@@ -1,30 +1,17 @@
 @import '../themes/default_themes_detail';
 
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-.container {
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
-html{
-    --color: #{$text-c0-dark};
-    --bg: #{$bg-c0-light};
-}
+// html{
+//     --color: #{$text-c0-dark};
+//     --bg: #{$bg-c0-light};
+// }
 
 
-html.dark {
-    --color: #{$text-c0-light};
-    --bg: #{$bg-c0-dark};
-}
+// html.dark {
+//     --color: #{$text-c0-light};
+//     --bg: #{$bg-c0-dark};
+// }
 
-body {
-    color:var(--color) !important;
-    background-color: var(--bg) !important;
-}
+// body {
+//     color:var(--color) !important;
+//     background-color: var(--bg) !important;
+// }
