xong carousel home

--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -1,10 +1,8 @@
-/*
-chứa các variables (biến) chung khai báo
-*/
 
 /*-------- Backroung ---------*/
 $bg-c0-white:#F5F5F5;
 
+$bg-c0-primary:#1976d2;
 
 $bg-c0-dark:#000;
 $bg-c1-dark:rgba(222, 221, 220, 1);
@@ -26,6 +24,7 @@ $text-c2-dark:rgba(203, 201, 201, 1);
 $text-c3-dark:#00000099;
 
 $text-c0-primary:#152AEBCC;
+$text-c1-primary: #1976d2;
 
 $text-pink:#DD2AED;
 // font-Weight
