--- a/src/assets/scss/base/_footer.scss
+++ b/src/assets/scss/base/_footer.scss
@@ -1,6 +1,9 @@
 .footer {
+    padding-top: 50px;
     .row {}
-
+ul{
+    padding-left: 0;
+}
     .copy-right {
         background: $bg-c2-dark;
         height: 74px;
@@ -9,6 +12,13 @@
             @include text($fs-2xl, $fw-normal, $text-c0-dark, $lh-c2);
             padding-top: 26px;
             text-align: center;
+            @media screen and (max-width:767.98px){
+                font-size:18px ;
+            }
+            @media screen and (max-width:767.98px){
+                font-size:0.9rem ;
+            }
         }
     }
+
 }
