--- a/src/assets/scss/base/_footer.scss
+++ b/src/assets/scss/base/_footer.scss
@@ -1,22 +1,32 @@
 .footer {
-    padding-top: 50px;
-    .row {}
-ul{
-    padding-left: 0;
-}
+    background: $bg-gradient-light-2 ;
+    padding-top: 40px;
+
+    .row {
+        color: $text-c0-white;
+
+    }
+
+    ul {
+        padding-left: 0;
+     
+    }
+
     .copy-right {
-        background: $bg-c2-dark;
+        // background: $bg-c2-dark;
         height: 74px;
 
         p {
             @include text($fs-2xl, $fw-normal, $text-c0-dark, $lh-c2);
             padding-top: 26px;
             text-align: center;
-            @media screen and (max-width:767.98px){
-                font-size:18px ;
+
+            @media screen and (max-width:767.98px) {
+                font-size: 18px;
             }
-            @media screen and (max-width:767.98px){
-                font-size:0.9rem ;
+
+            @media screen and (max-width:767.98px) {
+                font-size: 0.9rem;
             }
         }
     }
