--- a/src/assets/scss/layouts/_profile.scss
+++ b/src/assets/scss/layouts/_profile.scss
@@ -1,11 +1,12 @@
 @import '../helpers/variables';
 
 .profile {
-    h2 {
-        color: $text-c0-white;
-        width: 575px;
-        height: 74px;
-        background: linear-gradient(180deg, #F21299 0%, #1B02B5 100%);
+    padding-top: 64px;
+    background: $bg-gradient-light-1;
+
+    h1 {
+        color: $bg-gradient-dark-3;
+        font-size: 3rem;
 
         @media screen and (max-width:575.98px) {
             border-radius: 5px;
@@ -43,32 +44,45 @@
 
                         .form-group {
                             width: 443px;
-                            margin-bottom: 65px;
+                            margin-bottom: 35px;
+                            position: relative;
+
+                            @media screen and (min-width : 992px) and (max-width: 1024px) {
+                                max-width: 330px;
+                            }
 
                             @media screen and (max-width:991.98px) {
                                 margin-left: 10vw;
                             }
+
+                            @media screen and (max-width:767.98px) {
+                                width: 480px;
+                                margin-left: 16vw;
+
+                            }
+
+                            @media screen and (max-width:575.98px) {
+                                width: 430px;
+                                margin-left: 9vw;
+
+                            }
+
+                            @media screen and (max-width:414px) {
+                                width: 315px;
+                            }
+
+                            @media screen and (max-width:375px) {
+                                margin-left: 4vw;
+                            }
+
                             .p-err {
                                 margin-left: 0px;
-                                width: 443px;
-                                height: 54px;
-            margin-top: 5px;
-                            }
-                            p {
-                                @include text($fs-18, $fw-medium, $text-c3-dark, $lh-c2);
-                                margin-left: 6.67px;
-                                margin-bottom: 10px;
+                                width: 100%;
+                                margin-top: 5px;
+                                position: absolute;
+
                             }
 
-                            .form-control {
-                                @media screen and (max-width:767.98px) {
-                                    width: 560px;
-                                }
-
-                                @media screen and (max-width:575.98px) {
-                                    width: 420px;
-                                }
-                            }
                         }
 
                         &:nth-child(2) {
@@ -77,25 +91,61 @@
                             }
 
                             .gender {
+                                margin-top: 50px;
+
                                 span {
-                                    @include text($fs-18, $fw-medium, $text-c3-dark, $lh-c2);
+                                    @include text($fs-18, $fw-medium, $text-c0-white, $lh-c2);
                                     width: 59px;
                                     height: 30.69px;
                                     margin: 0px 36px 0 15px;
                                 }
 
-                                .d-flex {
+                                .gender-input {
+                                    display: flex;
+                                    justify-content: space-between;
+                                    color: $text-c0-white;
+
                                     input {
                                         cursor: pointer;
                                     }
 
                                     label {
                                         transform: translate(-1.2vw, 2vw);
+
+                                        @media screen and (max-width:1024px) {
+                                            transform: translate(-2.2vw, 3vw);
+                                        }
                                     }
                                 }
 
                                 .btn-main {
-                                    margin-top: 0px;
+                                    span {
+                                        margin: 0;
+                                        line-height: 29.69px;
+                                    }
+                                }
+
+                                @media screen and (max-width:575.98px) {
+                                    flex-direction: column;
+                                    margin-top: 35px;
+
+
+                                    span {
+                                        margin: 0 0 5px 0;
+                                    }
+
+                                    .gender-input {
+                                        margin-bottom: 35px;
+                                        justify-content: start;
+
+                                        label {
+                                            transform: translate(-3vw, 5vw);
+
+                                            @media screen and (max-width:414px) {
+                                                transform: translate(-5vw, 6vw);
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -109,24 +159,27 @@
 
     .profile-body {
 
-        div {
+        .profile-body-title {
             display: flex;
 
             h3 {
+
                 width: 277px;
                 border: 1px solid #DEDDDC;
                 border-top: none;
                 margin-bottom: 75px;
+                background: $bg-gradient-light-1 ;
 
                 span {
+                    display: inline-block;
                     width: 200px;
                     height: 39px;
                     margin-left: 32px;
                     cursor: pointer;
-                    @include text($fs-32, $fw-normal, $text-c0-dark, $lh-c7);
+                    @include text($fs-32, $fw-medium, $text-c0-white, $lh-c7);
 
-                    &:hover {
-                        color: $text-pink;
+                    &.active {
+                        color: $text-c1-primary;
                     }
                 }
 
@@ -140,19 +193,77 @@
             }
         }
 
-        table {
-            // margin-left: 102px;
-            margin-bottom: 76px;
-            text-align: center;
+        .profile-table {
+            padding-bottom: 50px;
 
-            @media screen and (max-width:1198.98px) {
-                margin-left: 0px;
+            table {
+                margin-bottom: 0;
+                text-align: center;
+                color: $text-c0-white;
+
+                @media screen and (max-width:1198.98px) {
+                    margin-left: 0px;
+                }
+                th,
+                td {
+                    border-right: 0.8px solid #fff;
+
+                    &:last-of-type {
+                        border-right: none;
+                    }
+                }
+
+                thead {
+                    tr {}
+                }
+                &>tbody>tr:hover>* {
+          background:#0000003d;
+                    color: $text-c0-white;
+                }
             }
+        }
+    }
+}
 
-            thead {
-                background-color: $bg-c2-dark;
+.profile-input {
+    display: flex;
 
-            }
+    p {
+        display: flex;
+        align-items: center;
+        width: 40px;
+        border: .5px solid #ffffff82;
+        background: $bg-gradient-light-1;
+        border-right: transparent;
+        border-top: 1px;
+        border-bottom: 1.5px;
+        border-radius: 4px 0 0 4px;
+
+        svg {
+            font-size: xx-large;
+            color: $text-c1-primary;
+        }
+    }
+
+    .form-control {
+        color: $text-c0-white;
+        font-weight: 500;
+        background: $bg-gradient-light-1;
+        border-radius: 0 4px 4px 0;
+        margin-left: -1px;
+        border-bottom: transparent;
+        border-top: transparent;
+
+        &:focus {
+            background-color: unset;
+            border: unset;
+            border-color: #ffffff82;
+            box-shadow: unset;
+            color: $text-c0-white;
+        }
+
+        &::placeholder {
+            color: $text-c0-white;
         }
     }
 }
