--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -13,6 +13,8 @@ $bg-gradient-dark-3:linear-gradient(to right, #355570, #283e51) !important;
 $bg-c0-white:#F5F5F5;
 
 $bg-c0-primary:#1976d2;
+$bg-c1-primary:#005aa7;
+
 
 $bg-c0-dark:#000;
 $bg-c1-dark:rgba(222, 221, 220, 1);
@@ -35,6 +37,7 @@ $text-c3-dark:#00000099;
 
 $text-c0-primary:#152AEBCC;
 $text-c1-primary: #1976d2;
+$text-c2-primary: #6dd5fa;
 
 $text-pink:#DD2AED;
 // font-Weight
